--- a/trabalho/src/pages/form.html
+++ b/trabalho/src/pages/form.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../images/Icons-Land-Transporter-Car-Left-Red.ico" type="image/x-icon">
     <title>Concessionária Texmex | Carros de Qualidade</title>
+    <script src="../../src/js/script.js" defer></script>
     <link rel="stylesheet" href="../../src/css/style.css">
 </head>
 <body>
@@ -49,8 +50,8 @@
                 <label for="outro">Outro</label>
                 <br><br>
                 <div class="inputBox">
-                    <label for="data" class="labelInput">Data de Nascimento:</label>
-                    <br><input type="date" name="data" id="data" class="inputUser" required>
+                    <label for="data_nasc" class="labelInput">Data de Nascimento:</label>
+                    <br><input type="date" name="data_nasc" id="data_nasc" class="inputUser" required>
                 </div>
                 <br><br>
                 <div class="inputBox">
