--- a/trabalho/src/pages/login.html
+++ b/trabalho/src/pages/login.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../images/Icons-Land-Transporter-Car-Left-Red.ico" type="image/x-icon">
     <title>Concessionária Texmex | Carros de Qualidade</title>
+    <script src="../../src/js/script.js" defer></script>
     <link rel="stylesheet" href="../../src/css/style.css">
 </head>
 <body>
@@ -20,29 +21,14 @@
     </main>
     <div class="tela_login">
         <h1>Login</h1>
-        <input type="text" placeholder="Usuário">
+        <input type="text" id="email" placeholder="Email">
         <br><br>
-        <input type="password" placeholder="Senha">
+        <input type="password" id="senha" placeholder="Senha">
         <br><br>
         <button>Entrar</button>
     </div>
           <button id="btn-top" aria-label="Voltar ao topo">↑</button>
-    <script>
-    // botão subir ao topo - comportamento
-    (function(){
-      const btn = document.getElementById('btn-top');
-      if(!btn) return;
-      // mostrar quando rolar 300px
-      window.addEventListener('scroll', () => {
-        if (window.scrollY > 300) btn.classList.add('show');
-        else btn.classList.remove('show');
-      });
-      // rolar suavemente ao topo ao clicar
-      btn.addEventListener('click', () => {
-        window.scrollTo({ top: 0, behavior: 'smooth' });
-      });
-    })();
-    </script>
+
     <footer>
         &copy; 2025 Concessionária Texmex - Todos os direitos reservados
     </footer>   
