--- a/trabalho/src/pages/login.html
+++ b/trabalho/src/pages/login.html
@@ -19,6 +19,7 @@
     </nav>
         </header>
     </main>
+    <form action="../php/testlogin.php" method="post">
     <div class="tela_login">
         <h1>Login</h1>
         <input type="text" id="email" placeholder="Email">
@@ -27,8 +28,8 @@
         <br><br>
         <button>Entrar</button>
     </div>
-          <button id="btn-top" aria-label="Voltar ao topo">↑</button>
-
+    </form>
+          <button id="btn-top" aria-label="Voltar ao topo"></button>
     <footer>
         &copy; 2025 Concessionária Texmex - Todos os direitos reservados
     </footer>   
