--- a/Estácio/index.html
+++ b/Estácio/index.html
@@ -1,40 +1,41 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="shortcut icon" href="src/images/Icons-Land-Transporter-Car-Left-Red.ico" type="image/x-icon">
-  <title>Concessionária Texmex | Carros de Qualidade</title>
-  <script src="src/js/script.js" defer></script>
-  <meta name="description" content="Concessionária Texmex - Os melhores carros com qualidade, confiança e preços acessíveis. Venha conhecer nossas ofertas.">
-  <link rel="stylesheet" href="../trabalho/src/css/style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="src/images/Icons-Land-Transporter-Car-Left-Red.ico" type="image/x-icon">
+    <title>Concessionária Texmex | Carros de Qualidade</title>
+    <script src="src/js/script.js" defer></script>
+    <meta name="description" content="Concessionária Texmex - Os melhores carros com qualidade, confiança e preços acessíveis. Venha conhecer nossas ofertas.">
+    <link rel="stylesheet" href="src/css/style.css">
 </head>
 <body>
-  <header>
-    <nav>
-      <img class="logo" src="../Estácio/src/images/concessionaria t (3).png" alt=" imagem da concessioraria" style="height: 120px; width: 190px;">
-      <ul>
-    <li><a href="../Estácio/index.html">Início</a></li>
-    <li><a href="../Estácio/src/pages/sobre.html">Sobre</a></li>
-    <li><a href="../Estácio/src/pages/contato.html">Contato</a></li>
-    <li><a href="../Estácio/src/pages/carros.html">Carros</a></li>
-    <li><a href="../Estácio/src/pages/login.html">Login</a></li>
-    <li><a href="../Estácio/src/pages/carrinho.html">Carrinho</a></li>
-      </ul>
-    </nav>
-  </header>
+    <header>
+        <nav>
+            <img class="logo" src="src/images/concessionaria t (3).png" alt="imagem da concessionária" style="height: 120px; width: 190px;">
+            <ul>
+                <li><a href="index.html">Início</a></li>
+                <li><a href="src/pages/sobre.html">Sobre</a></li>
+                <li><a href="src/pages/contato.html">Contato</a></li>
+                <li><a href="src/pages/carros.html">Carros</a></li>
+                <li><a href="src/pages/login.html">Login</a></li>
+                <li><a href="src/pages/carrinho.html">Carrinho</a></li>
+            </ul>
+        </nav>
+    </header>
 
-  <main>
-    <h1>Bem-vindo à Concessionária Texmex 🚗</h1>
-    <h2>Qualidade, Confiança e Preços Acessíveis</h2>
-    <p>Na <strong>Texmex</strong>, você encontra os melhores veículos, com garantia e atendimento de excelência.</p>
-  </main>
-<img class="imagem_principal" src="../Estácio/src/images/concessionaria t.png" alt="imagemprincipal">
+    <main>
+        <h1>Bem-vindo à Concessionária Texmex 🚗</h1>
+        <h2>Qualidade, Confiança e Preços Acessíveis</h2>
+        <p>Na <strong>Texmex</strong>, você encontra os melhores veículos, com garantia e atendimento de excelência.</p>
+    </main>
 
-      <button id="btn-top" aria-label="Voltar ao topo">↑</button>
-  
-<footer>
-    &copy; 2025 Concessionária Texmex - Todos os direitos reservados
-  </footer>
+    <img class="imagem_principal" src="src/images/concessionaria t.png" alt="imagem principal">
+
+    <button id="btn-top" aria-label="Voltar ao topo">↑</button>
+
+    <footer>
+        &copy; 2025 Concessionária Texmex - Todos os direitos reservados
+    </footer>
 </body>
 </html>
