--- a/Estácio/src/pages/carros.html
+++ b/Estácio/src/pages/carros.html
@@ -2,52 +2,54 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=], initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../../src/images/Icons-Land-Transporter-Car-Left-Red.ico" type="image/x-icon">
     <title>Concessionária Texmex | Carros de Qualidade</title>
     <script src="../../src/js/script.js" defer></script>
     <link rel="stylesheet" href="../../src/css/style.css">
 </head>
-<body>   
-      <header>
-    <nav>
-      <img class="logo" src="../../src/images/concessionaria t (3).png" alt=" imagem da concessioraria">
-      <ul>
-        <li><a href="../../index.html">Início</a></li>
-        <li><a href="../../src/pages/sobre.html">Sobre</a></li>
-        <li><a href="../../src/pages/contato.html">Contato</a></li>
-        <li><a href="../../src/pages/carros.html">Carros</a></li>
-        <li><a href="../../src/pages/login.html">Login</a></li>
-        <li><a href="../../src/pages/carrinho.html">Carrinho</a></li>
-      </ul>
-    </nav>
-  </header>
+<body>
+    <header>
+        <nav>
+            <img class="logo" src="../../src/images/concessionaria t (3).png" alt="imagem da concessionária">
+            <ul>
+                <li><a href="../../index.html">Início</a></li>
+                <li><a href="../../src/pages/sobre.html">Sobre</a></li>
+                <li><a href="../../src/pages/contato.html">Contato</a></li>
+                <li><a href="../../src/pages/carros.html">Carros</a></li>
+                <li><a href="../../src/pages/login.html">Login</a></li>
+                <li><a href="../../src/pages/carrinho.html">Carrinho</a></li>
+            </ul>
+        </nav>
+    </header>
+
     <main>
-    <h1>Bem-vindo à Concessionária Texmex 🚗</h1>
-    <h2>Qualidade, Confiança e Preços Acessíveis</h2>
-    <p>Na <strong>Texmex</strong>, você encontra os melhores veículos, com garantia e atendimento de excelência.</p>
-  </main>
-  <div class="carros" data-nome="Acura Integra Type R (DC2) 2001" data-preco="101650" data-imagem="../../src/images/NFSUG1_Acura_IntegraTypeR_Stock_F.webp">
-  <img class="carrinhos" src="../../src/images/NFSUG1_Acura_IntegraTypeR_Stock_F.webp" alt="imagem do carro integra type r">
-  <h4>Acura Integra Type R (DC2) 2001</h4>
-  <br>
-  <p>
-    O Acura Integra Type R (DC2), conhecido como Honda Integra Type R fora da América do Norte, é um cupê esportivo com tração dianteira construído entre 1998 e 2001.
-  Ele usa um motor 1.8L de quatro cilindros em linha, que produz 195 cv. Baseado na série Honda Integra DC2, foi rebatizado como Acura nos Estados Unidos.
-  O Type R foi a versão mais cara e rápida da geração DC Integra. Também é um carro popular no cenário de tuning importado.
-  </p>
-  <p>
-    Ele tem aceleração medíocre e pode atingir uma grande velocidade máxima, mas pode sofrer com subviragem nas curvas.
-  </p>
-  <p>
-    Motor: 1.8L I4 (B18C5), 195 cv (145 kW) a 8291 rpm,129 lb⋅ft (175 N·m) a 5794 rpm.
-  </p>
-  <p>
-    Velocidade máxima: 143 mph (230 km/h), 0-60 mph: 6,2 segundos, Transmissão: Manual de 5 velocidades, 
-  Peso do meio-fio: 1.170 kg (2.579 libras),Layout:Motor dianteiro, tração dianteira.
-  </p>
-  <h4>Preço: R$ 101.650</h4>
-  <br>
+        <h1>Bem-vindo à Concessionária Texmex 🚗</h1>
+        <h2>Qualidade, Confiança e Preços Acessíveis</h2>
+        <p>Na <strong>Texmex</strong>, você encontra os melhores veículos, com garantia e atendimento de excelência.</p>
+    </main>
+
+    <div class="carros" data-nome="Acura Integra Type R (DC2) 2001" data-preco="101650" data-imagem="../../src/images/NFSUG1_Acura_IntegraTypeR_Stock_F.webp">
+        <img class="carrinhos" src="../../src/images/NFSUG1_Acura_IntegraTypeR_Stock_F.webp" alt="imagem do carro integra type r">
+        <h4>Acura Integra Type R (DC2) 2001</h4>
+        <br>
+        <p>
+            O Acura Integra Type R (DC2), conhecido como Honda Integra Type R fora da América do Norte, é um cupê esportivo com tração dianteira construído entre 1998 e 2001.
+            Ele usa um motor 1.8L de quatro cilindros em linha, que produz 195 cv. Baseado na série Honda Integra DC2, foi rebatizado como Acura nos Estados Unidos.
+            O Type R foi a versão mais cara e rápida da geração DC Integra. Também é um carro popular no cenário de tuning importado.
+        </p>
+        <p>
+            Ele tem aceleração medíocre e pode atingir uma grande velocidade máxima, mas pode sofrer com subviragem nas curvas.
+        </p>
+        <p>
+            Motor: 1.8L I4 (B18C5), 195 cv (145 kW) a 8291 rpm, 129 lb⋅ft (175 N·m) a 5794 rpm.
+        </p>
+        <p>
+            Velocidade máxima: 143 mph (230 km/h), 0-60 mph: 6,2 segundos, Transmissão: Manual de 5 velocidades,
+            Peso do meio-fio: 1.170 kg (2.579 libras), Layout: Motor dianteiro, tração dianteira.
+        </p>
+        <h4>Preço: R$ 101.650</h4>
+        <br>
   <button class="btn-add">Adicionar ao carrinho</button>
   </div>
   <hr>
@@ -549,12 +551,14 @@
   <h4>Preço: R$ 64.200</h4>
   <br>
   <button class="btn-add">Adicionar ao carrinho</button>
-  </div>
+    </div>
 
-  <button id="btn-top" aria-label="Voltar ao topo">↑</button>
-  
+    <button id="btn-top" aria-label="Voltar ao topo">↑</button>
+
     <footer>
-    &copy; 2025 C oncessionária Texmex - Todos os direitos reservados
-  </footer>
+        &copy; 2025 Concessionária Texmex - Todos os direitos reservados
+    </footer>
+</body>
+</html>
 </body>
   </html>
