--- a/Estácio/src/pages/pagamento.html
+++ b/Estácio/src/pages/pagamento.html
@@ -3,27 +3,58 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="../images/Icons-Land-Transporter-Car-Left-Red.ico" type="image/x-icon">
-    <title>Concessionária Texmex | Carros de Qualidade</title>
+    <link rel="shortcut icon" href="../../src/images/Icons-Land-Transporter-Car-Left-Red.ico" type="image/x-icon">
+    <title>Concessionária Texmex | Pagamento</title>
     <script src="../../src/js/script.js" defer></script>
     <link rel="stylesheet" href="../../src/css/style.css">
 </head>
 <body>
- <h2>Pagamento com Cartão</h2><div id="formCartao" class="box">
-    <label>Nome no cartão:</label>
-    <input type="text" id="nomeCartao" placeholder="Nome completo" />
+    <header>
+        <nav>
+            <img class="logo" src="../../src/images/concessionaria t (3).png" alt="imagem da concessionária" style="height: 120px; width: 190px;">
+            <ul>
+                <li><a href="../../index.html">Início</a></li>
+                <li><a href="../../src/pages/carros.html">Carros</a></li>
+                <li><a href="../../src/pages/carrinho.html">Carrinho</a></li>
+            </ul>
+        </nav>
+    </header>
 
-    <label>Número do cartão:</label>
-    <input type="text" id="numeroCartao" maxlength="16" placeholder="Somente números" />
+    <main>
+        <h1>💳 Finalizar Pagamento</h1>
+        <p id="resumoTotal" class="resumo-total"></p>
+    </main>
 
-    <label>Validade (MM/AA):</label>
-    <input type="text" id="validade" maxlength="5" placeholder="MM/AA" />
+    <div id="formCartao" class="pagamento-container">
+        <h2>Dados do Cartão</h2>
+        <form class="formulario-pagamento">
+            <div class="form-group">
+                <label for="nomeCartao">Nome no Cartão:</label>
+                <input type="text" id="nomeCartao" placeholder="Nome completo" required />
+            </div>
 
-    <label>CVV:</label>
-    <input type="text" id="cvv" maxlength="3" placeholder="3 dígitos" />
+            <div class="form-group">
+                <label for="numeroCartao">Número do Cartão:</label>
+                <input type="text" id="numeroCartao" maxlength="16" placeholder="0000 0000 0000 0000" required />
+            </div>
 
-    <button class="btn" id="btnFinalizarPagamento">Finalizar Pagamento</button>
-</div>
+            <div class="form-row">
+                <div class="form-group">
+                    <label for="validade">Validade (MM/AA):</label>
+                    <input type="text" id="validade" maxlength="5" placeholder="MM/AA" required />
+                </div>
+                <div class="form-group">
+                    <label for="cvv">CVV:</label>
+                    <input type="text" id="cvv" class="input-cvv" maxlength="3" placeholder="123" required />
+                </div>
+            </div>
 
+            <button type="button" class="btn-pagar" id="btnFinalizarPagamento">🔒 Finalizar Pagamento</button>
+        </form>
+    </div>
+
+    <footer>
+        &copy; 2025 Concessionária Texmex - Todos os direitos reservados
+    </footer>
 </body>
 </html>
